kubernetes/production/apps/default/homepage/app/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app homepage
  labels:
    app.kubernetes.io/name: *app
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      services:
        - name: *app
          port: 3000
  tls:
    secretName: local-production-tls
